--- a/sushi-website/styles/styles.css
+++ b/sushi-website/styles/styles.css
@@ -52,6 +52,7 @@ h2:after{
 
 section{
     padding: 100px 0px;
+    clear: both;
 }
 
 header{
@@ -104,10 +105,15 @@ h1{
     font-size: 0.8em;
 }
 
-#main-nav li a{
+#main-nav li a:link, #main-nav li a:visited{
     text-decoration: none;
     text-transform: uppercase;
     color: #81E0FD;
+    opacity: 0.5;
+}
+
+#main-nav li a:hover, #main-nav li a:active{
+    opacity: 1;
 }
 
 nav{
@@ -168,4 +174,74 @@ nav{
 
 section p{
     font-size: 85%;
+}
+
+.food-images-container{
+    list-style: none;
+    width: 100%;
+    height: auto;
+}
+
+.food-images-container li{
+    display: block;
+    float: left;
+    width: 25%;
+}
+
+.food-image{
+    width: 100%;
+    overflow: hidden;
+    background-color: black;
+}
+
+.food-image img{
+    width: 100%;
+    height: 300px;
+    transform: scale(1.2);
+    opacity: 0.7;
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.food-image img:hover{
+    opacity: 1;
+    transform: scale(1.05);
+}
+
+#phone-image{
+    width: 100%;
+}
+
+#phone-image-container{
+    margin-left: 10%;
+    margin-right: 6.6%;
+}
+
+.order-step{
+    margin-bottom: 30px;
+}
+
+.order-step div{
+    color: #81E0FD;
+    border: 2px solid #81E0FD;
+    width: 50px;
+    height: 50px;
+    border-radius: 150px;
+    text-align: center;
+    padding: 10px;
+    display: inline;
+    float: left;
+    margin-right: 20px;
+}
+
+.order-step p{
+    padding-top: 15px;
+}
+
+.order-step:last-of-type{
+    margin-bottom: 150px;
+}
+
+.app-button img{
+    height: 50px;
+    margin-right: 10px;
 }
